# lingtai-kernel

./: .gitignore  ANATOMY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  README.wen.md  README.zh.md  SECURITY.md  SUPPORT.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: wheels.yml
crates/lingtai-search-sidecar/: Cargo.toml  README.md
crates/lingtai-search-sidecar/src/: main.rs
discussions/: headless-runtime-contract.md  prompt-architect-collaboration.md
docs/plans/: 2026-05-12-knowledge-v2-file-backed.md  2026-06-25-fsutil-migration.md
docs/readmes/: README.wen.md  README.zh.md
docs/references/: acknowledgements.md  claude-code-guide.md  codex-http-anatomy-investigation.md
docs/sdk/: README.md  architecture-foundation.md
docs/sdk/examples/: 01_query_offline.py  02_session_offline.py  03_native_runtime.py  04_registry_and_guard.py  README.md
reports/: bash-harness-skills-explainer.html  cloud-mail-addon-20260613.html  codex-prompt-cache-key-20260612.html  enrich-tool-error-results-20260609.html  goal-manual-guided-setup-20260610.html  mcp-inbox-preview-docstrings-20260610.html  mcp-notification-preview-dedupe-20260610.html  notification-goal-atomic-dismiss-20260610.html  post-molt-notification-explainer.html  pr-issue104-mcp-closed-resource-restart-explainer.html  pr1a-tool-result-replay-explainer.html  pr257-dynamic-language-principle-explainer.html  pr270-tool-call-guard-explainer.html  pr279-principle-activeness-explainer.html  refresh-stale-process-relaunch-explainer.html  t3-relaunch-watcher-redaction-explainer.html
reports/kernel-release-v0.13.0-20260620/: candidate_head.txt  commits.md  prs.md  release-body.md  release-log.html
reports/kernel-release-v0.13.0-20260620/raw/: commits.tsv  diffstat.txt  dist-ls.txt  dist-sha256.txt  pr_numbers.txt  prs.json  shortstat.txt
reports/kernel-release-v0.13.1-20260621/: candidate_head.txt  commits.md  prs.md  release-body.md  release-log.html
reports/kernel-release-v0.13.1-20260621/raw/: diffstat.txt  shortstat.txt
reports/kernel-release-v0.15.2-20260627/: artifact-hashes.txt  candidate_head.txt  commits.md  release-body.md  release-report.md
reports/kernel-release-v0.15.2-20260627/raw/: diffstat.txt  shortstat.txt
reports/sdk-architecture-foundation-20260617/: implementation-report.md
reports/sdk-stage3d-highstate-communication-bundles-20260617/: implementation-report.md
src/lingtai/: ANATOMY.md  __init__.py  __main__.py  _version.py  agent.py  cli.py  guard_wiring.py  init_schema.py  mcp_catalog.json
src/lingtai/auth/: ANATOMY.md  codex.py
src/lingtai/capabilities/: ANATOMY.md  __init__.py
src/lingtai/core/: ANATOMY.md  __init__.py  _media_host.py  _zhipu_mode.py  avatar_bundle.py  bash_bundle.py  communication_bundle.py  file_bundle.py  knowledge_bundle.py  mcp_bundle.py  psyche_bundle.py  registry.py  skills_bundle.py  soul_bundle.py  system_bundle.py
src/lingtai/i18n/: ANATOMY.md  en.json  wen.json  zh.json
src/lingtai/kernel/: ANATOMY.md  builtin_tools.py  presets.py
src/lingtai/llm/: ANATOMY.md  _register.py  base.py  interface_converters.py  service.py
src/lingtai/mcp_servers/: ANATOMY.md  _skill.py
src/lingtai/prompts/: guidance.json  principle.md  procedures.md  substrate.md
src/lingtai/services/: ANATOMY.md  file_io_sidecar.py  mcp.py
src/lingtai_cli/: ANATOMY.md  __init__.py  assembly.py  cli.py  host.py
src/lingtai_kernel/: ANATOMY.md  _frontmatter.py  _fsutil.py  config.py  config_resolve.py  loop_guard.py  meta_block.py  notifications.py  preset_connectivity.py  presets.py  prompt.py  prompt_catalog.py  runtime_identity.py  safety_limits.py  session.py  state.py  tool_call_guard.py  tool_executor.py  tool_result_artifacts.py  tool_result_recovery.py  trace_redaction.py  workdir.py
src/lingtai_kernel/base_agent/: ANATOMY.md  __init__.py  identity.py  lifecycle.py  messaging.py  prompt.py  turn.py  worker_recovery.py
src/lingtai_kernel/i18n/: ANATOMY.md  en.json  wen.json  zh.json
src/lingtai_kernel/intrinsics/: ANATOMY.md  __init__.py
src/lingtai_kernel/llm/: ANATOMY.md  base.py  interface.py
src/lingtai_kernel/maintenance/: ANATOMY.md  __init__.py  retention.py
src/lingtai_kernel/migrate/: ANATOMY.md  __init__.py  agent_m001_init_procedures_override.py  agent_m003_init_prompt_contract.py  migrate.py
src/lingtai_kernel/nudge/: ANATOMY.md  __init__.py  goal.py  kernel_version.py  source_drift.py
src/lingtai_kernel/services/: ANATOMY.md  mail.py  (+1 more)
src/lingtai_sdk/: ANATOMY.md  __init__.py  _compat.py  bundle_registry.py  capabilities.py  capability_host.py  client.py  communication_tools.py  core_bundles.py  file_mutation_tools.py  file_tools.py  guard_bridge.py  knowledge_tools.py  native.py  psyche_tools.py  runtime.py  sdk_skill.py  skill_tools.py  soul_tools.py
tests/: _molt_helpers.py  _notification_helpers.py  _service_helpers.py  conftest.py  test_activate_preset.py  test_active_stuck_watchdog.py  test_adapter_registry.py  test_aed_recovery.py  test_agent.py  test_agent_capabilities.py  test_agent_meta_guidance.py  test_agent_preset_manifest.py  test_avatar_preset_inheritance.py  test_avatar_rules.py  test_avatar_timezone_inheritance.py  test_base_agent.py  test_bash_async.py  test_chat_interface_invariant.py  test_check_caps.py  test_claude_agent_sdk_adapter.py  test_cli.py  test_cli_integration.py  test_cloud_mail_addon.py  test_codex_cache_stall_temp_key.py  test_codex_endpoint_override.py  test_codex_endpoint_pool.py  test_codex_prompt_cache_key.py  test_codex_raw_reasoning_replay.py  test_codex_ws_session.py  test_codex_ws_tool_result_freeze.py  test_communication_bundle_bridge.py  test_compaction.py  test_daemon.py  test_daemon_backend_options.py  test_daemon_check_historical.py  test_daemon_claude_interactive_backend.py  test_daemon_claude_usage.py  test_daemon_cli_143_attribution.py  test_daemon_manifest.py  test_daemon_opencode_backend.py  (+134 more)
tests/unit/: test_preset_pending_confirmation.py
(+192 files in other folders)
