[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lingtai"
version = "0.10.8"
description = "Generic research agent with intrinsic tools and MCP-compatible extension interface"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "mcp>=1.0",
    "ddgs>=7.0",
    "trafilatura>=2.0",
    "filelock>=3.0",
    "pyyaml>=6.0",
    # Curated MCP servers (formerly bundled in lingtai.addons; v0.7.3 split
    # into separate sibling repos and PyPI packages). Required so
    # `pip install lingtai` ships the same capability surface as previous
    # releases. See lingtai-anatomy reference/mcp-protocol.md for the
    # catalog → registry → activation chain that wires them up.
    "lingtai-imap>=0.1.0",
    "lingtai-telegram>=0.1.0",
    "lingtai-feishu>=0.1.0",
    "lingtai-wechat>=0.1.0",
]

[project.scripts]
lingtai-agent = "lingtai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lingtai_kernel = ["i18n/*.json"]
lingtai = [
    "i18n/*.json",
    "mcp_catalog.json",
    "core/*/*.json",
    "core/*/manual/**/*",
    "capabilities/*/*.json",
    "capabilities/*/manual/**/*",
    "intrinsic_skills/*/**/*",
    "prompts/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
