[build-system]
# ``wheel`` is required because setup.py overrides ``bdist_wheel`` to mark
# the wheel as platform-specific when the bundled Rust sidecar binary is
# present. See setup.py for the build-time bundle / fallback logic.
requires = ["setuptools>=68.0", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "lingtai"
version = "0.15.0"
description = "Generic research agent with intrinsic tools and MCP-compatible extension interface"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "mcp>=1.0",
    "ddgs>=7.0",
    "trafilatura>=2.0",
    "filelock>=3.0",
    "pyyaml>=6.0",
    # Curated MCP server implementations live in this distribution under
    # `lingtai.mcp_servers.*` so the catalog can launch them with `python -m`
    # without separate PyPI wheels. Keep their third-party runtime dependencies
    # here.
    "imapclient>=3.0.0",
    "lark-oapi>=1.4.0",
    "cryptography>=42.0.0",
    "qrcode>=7.4.0",
    "faster-whisper>=1.0.0",
]

[project.scripts]
lingtai-agent = "lingtai.cli:main"
lingtai-imap = "lingtai.mcp_servers.imap.__main__:main"
lingtai-telegram = "lingtai.mcp_servers.telegram.__main__:main"
lingtai-feishu = "lingtai.mcp_servers.feishu.__main__:main"
lingtai-wechat = "lingtai.mcp_servers.wechat.__main__:main"
lingtai-wechat-bootstrap = "lingtai.mcp_servers.wechat.login:_bootstrap_main"
lingtai-whatsapp = "lingtai.mcp_servers.whatsapp.__main__:main"
lingtai-cloud-mail = "lingtai.mcp_servers.cloud_mail.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lingtai*", "lingtai_kernel*"]
exclude = [
    "lingtai_imap*",
    "lingtai_telegram*",
    "lingtai_feishu*",
    "lingtai_wechat*",
    "lingtai_whatsapp*",
    "lingtai.addons*",
]

[tool.setuptools.package-data]
lingtai_kernel = ["i18n/*.json"]
lingtai = [
    "i18n/*.json",
    "mcp_catalog.json",
    "core/*/*.json",
    "core/*/manual/**/*",
    "capabilities/*/*.json",
    "capabilities/*/manual/**/*",
    "intrinsic_skills/*/**/*",
    "prompts/*.md",
    "prompts/*.json",
    # Rust sidecar binary bundled at build time by setup.py — present in
    # platform-specific wheels, absent in pure-Python sdist fallback
    # builds. The glob is non-strict, so missing files don't fail builds.
    "bin/lingtai-search-sidecar",
    "bin/lingtai-search-sidecar.exe",
]
"lingtai.mcp_servers.telegram" = ["notification_header.md", "SKILL.md", "reference/**/*", "assets/**/*"]
"lingtai.mcp_servers.feishu" = ["notification_header.md", "SKILL.md", "reference/**/*", "assets/**/*"]
"lingtai.mcp_servers.wechat" = ["notification_header.md", "SKILL.md", "reference/**/*", "assets/**/*"]
"lingtai.mcp_servers.whatsapp" = ["notification_header.md", "SKILL.md", "reference/**/*", "assets/**/*"]
"lingtai.mcp_servers.imap" = ["SKILL.md", "reference/**/*", "assets/**/*"]
"lingtai.mcp_servers.cloud_mail" = ["SKILL.md", "reference/**/*", "assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
