[package]
name = "lingtai-search-sidecar"
version = "0.2.0"
edition = "2021"
publish = false
description = "Optional Rust sidecar that backs LingTai's grep/glob via JSON stdin/stdout."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Ripgrep stack — keeps the sidecar's traversal/search internals close to
# what `rg` itself uses, so the backend benefits from the same engineering
# work that makes ripgrep fast.
ignore = "0.4"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"

[profile.release]
opt-level = 3
lto = true
